[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
fiskeridir-rs = { workspace = true }
orca-core = { workspace = true }

tokio = "1.35.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.5.1"
tracing = "0.1.40"
async-trait = "0.1.77"
error-stack = { workspace = true }
chrono = { version = "0.4.33", features = ["serde"] }
wkt = { version = "0.10.3", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["gzip"] }
geozero = "0.11.0"
table-extract = "0.2.3"
csv = "1.3.0"
pyo3 = { version = "0.20.2", features = ["chrono", "auto-initialize"] }
regex = "1.10.3"
