[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }
http-client = { path = "../http-client" }

fiskeridir-rs = { workspace = true }
orca-core = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
wkt = { workspace = true }
uuid = { workspace = true }
csv = { workspace = true }
num-traits = { workspace = true }

geozero = "0.14.0"
table-extract = "0.2.3"

[dev-dependencies]
http-client = { path = "../http-client", default-features = false }
