[package]
name = "trip-assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }

async-trait = "0.1.68"
tracing = "0.1.37"
chrono = { version = "0.4.24", features = ["serde"] }
error-stack = { workspace = true }
strum = { version = "0.24.1", features = ["derive"] }
geoutils = "0.5.1"
num-traits = "0.2.15"


[dev-dependencies]
postgres = { path = "../postgres" }
rand = "0.8.5"
dockertest = { version = "0.3.1", registry = "orcalabs-orcastrator" }
orca-core = { version = "0.20.0", registry = "orcalabs-orcastrator", features = [
    "dockertest",
] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
fiskeridir-rs = { workspace = true }
tracing-subscriber = "0.3.17"
