[package]
name = "trip-distancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core" }

async-trait = "0.1.72"
tracing = "0.1.37"
error-stack = { workspace = true }
geoutils = "0.5.1"

[dev-dependencies]
postgres = { path = "../postgres" }
rand = "0.8.5"
dockertest = { version = "0.3.1", registry = "orcalabs-orcastrator" }
orca-core = { workspace = true, features = ["dockertest"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
fiskeridir-rs = { workspace = true }
tracing-subscriber = "0.3.17"
chrono = { version = "0.4.26", features = ["serde"] }
