[package]
name = "vessel-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyogre-core = { path = "../kyogre-core", features = ["utoipa"] }

async-trait = "0.1.81"
tracing = "0.1.40"
error-stack = { workspace = true }
