[package]
name = "web-api"
version = "0.1.0"
edition = "2021"
authors = ["<contact@orcalabs.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all-tests = []

[dependencies]
kyogre-core = { path = "../kyogre-core", features = ["utoipa"] }
postgres = { path = "../postgres" }
duckdb-rs = { path = "../duckdb-rs" }
meilisearch = { path = "../meilisearch" }

fiskeridir-rs = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }
orca-core = { workspace = true, features = ["actix-telemetry", "telemetry"] }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "chrono", "uuid"] }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
futures = { workspace = true }
enum_index = { workspace = true }
wkt = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

actix-web = "4.9.0"
actix-cors = "0.7.0"
utoipa-swagger-ui = { version = "7.1", features = ["actix-web"] }
async-stream = "0.3.5"
jsonwebtoken = "9.3.0"
serde_qs = { version = "0.13.0", features = ["actix4"] }

[dev-dependencies]
engine = { path = "../engine" }
vessel-benchmark = { path = "../vessel-benchmark" }

machine = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
dockertest = { workspace = true }
orca-core = { workspace = true, features = ["dockertest"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }

rsa = { version = "0.9.6", features = ["serde"] }
base64 = "0.22.1"
