[package]
name = "web-api"
version = "0.1.0"
edition = "2021"
authors = ["<contact@orcalabs.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all-tests = []

[dependencies]
kyogre-core = { path = "../kyogre-core", features = ["oasgen"] }
postgres = { path = "../postgres" }
duckdb-rs = { path = "../duckdb-rs" }
meilisearch = { path = "../meilisearch" }
http-client = { path = "../http-client" }
processors = { path = "../processors" }

fiskeridir-rs = { workspace = true }
stack-error = { workspace = true }
snafu = { workspace = true }

orca-core = { workspace = true, features = ["actix-telemetry", "telemetry"] }

serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
futures = { workspace = true }
enum_index = { workspace = true }
wkt = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
oasgen = { workspace = true, features = ["actix", "swagger-ui", "serde_qs"] }

actix-web = "4.9.0"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
serde_qs = { version = "0.13.0", features = ["actix4"] }
pin-project-lite = "0.2.16"

[dev-dependencies]
engine = { path = "../engine", features = ["test"] }
trip-benchmark = { path = "../trip-benchmark" }
http-client = { path = "../http-client", default-features = false }

fiskeridir-rs = { workspace = true, features = ["test"] }
orca-core = { workspace = true, features = ["test-helper"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = { workspace = true }

float-cmp = "0.10.0"
rsa = { version = "0.9.7", features = ["serde"] }
base64 = "0.22.1"
