[package]
name = "fuel-tuning"
version = "0.1.0"
edition = "2024"

[dependencies]
kyogre-core = { path = "../../../src/kyogre-core", features = ["sqlx"] }
fiskeridir-rs = { path = "../../../src/fiskeridir-rs", features = ["sqlx"] }
fuel-validation = { path = "../fuel-validation" }

chrono = "0.4"
anyhow = "1.0.96"
calamine = { version = "0.26.1", features = ["chrono", "dates"] }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
geoutils = "0.5.1"
async-channel = "2.3.1"
rand = "0.9.0"
strum = { version = "0.27.1", features = ["derive"] }
futures = "0.3.31"
