[package]
name = "fuel-validation"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
anyhow = "1.0.96"
calamine = { version = "0.26.1", features = ["chrono", "dates"] }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "chrono",
    "json",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
